// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute reserve endpoint should return ripcord 1`] = `
{
  "errorMessage": "ethereum-cl-indexer balance endpoint returns negative value -1",
  "ripcord": true,
  "ripcordDetails": ""ethereum-cl-indexer balance endpoint returns negative value"",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute reserve endpoint should return success 1`] = `
{
  "data": {
    "result": "800",
  },
  "result": "800",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
